# reelvdr

./: README.md
src/: Make.config  Makefile  REVISIONS  indent.pro
src/etc/: asound.conf  exports  fstab  graphlcd.conf  profile  securetty
src/hdplayer3/: Makefile  audio_parse.c  audio_parse.h  channel.c  channel.h  decoder.c  demux.c  demux.h  h264_helper.h  hdplayer.c  hw_specials.c  hw_specials.h  osd.c  osd.h  player.c  player.h  types.h  video_parse.c  video_parse.h  wis-decoder-api.h
src/kernel/scx200-audio/: AUTHORS  Makefile  Makefile.in  README  amd_geode.c  amd_geode.h  config.status  configure  configure.ac  force48k.patch  os_inc.c  os_inc.h  pcm_oss_2.6.10.patch
src/libs/: graphlcd-base  libdvdnav  libmpeg2dec  libreel  reelaudiodb
src/misc/: birthday.txt
src/sbin/: CopytoTftpRoot.sh  PTPCameraMount.sh  UpdateStreamType.sh  automounter  avahi-publish-avg-mysql.sh  bluetooth_start.sh  channelscan_list.sh  compress_recording.sh  convert_to_utf8.sh  cut_rec_remotely.sh  daily-reboot  delarchivemarks.sh  delcuttingmarks.sh  delete_preview.sh  dev_frontpanel.sh  dvd-rw-format.sh  dvdarchive.sh  dvdswitch_read.sh  dvdswitch_write.sh  dyndnsd  externremux.sh  factorysettings.sh  format_device.sh  framebuffer-amarok  framebuffer-firefox  fskprotect.sh  generate_preview.sh  getConfigsFromAVGServer.sh  gnudipd  handlearchived.sh  image_convert.sh  link-shares  markasnew.sh  mediaanalyzer.sh  mediacrawler.sh  mediadisk_helper.sh  mediaremover.sh  migrate_mounts  mount.sh  mount_ipod.sh  (+36 more)
src/utils/: Makefile  enable_wol  hotplug  linkopt.sh  preparehd.sh  (+1 more)
(+7284 files in other folders)
